--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -50,12 +50,12 @@
     <Compile Include="PerformanceViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongPlayer.cs" />
-    <Compile Include="StatusDisplay.cs" />
-    <Compile Include="StatusDisplayChannels\ChronometerStatusDisplayChannel.cs" />
-    <Compile Include="StatusDisplayChannels\DefautStatusDisplayChannel.cs" />
-    <Compile Include="StatusDisplayChannels\MouseStatusDisplayChannel.cs" />
-    <Compile Include="StatusDisplayChannels\StatusDisplayChannel.cs" />
-    <Compile Include="StatusDisplayChannels\StatusDisplayText.cs" />
+    <Compile Include="StatusDisplay\StatusDisplay.cs" />
+    <Compile Include="StatusDisplay\Channels\ChronometerStatusDisplayChannel.cs" />
+    <Compile Include="StatusDisplay\Channels\DefautStatusDisplayChannel.cs" />
+    <Compile Include="StatusDisplay\Channels\MouseStatusDisplayChannel.cs" />
+    <Compile Include="StatusDisplay\StatusDisplayChannel.cs" />
+    <Compile Include="StatusDisplay\StatusDisplayText.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Diese\Diese.Composition\Diese.Composition.csproj">
