--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ILoadContent.cs" />
     <Compile Include="Injection\InjectionScope.cs" />
     <Compile Include="Injection\LocalDependencyInjector.cs" />
+    <Compile Include="IShapedObject.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="Layers\ILayer.cs" />
     <Compile Include="Layers\ILayerManager.cs" />
