--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -45,10 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chronometer.cs" />
+    <Compile Include="ShapeRendering\CircleShapeObject.cs" />
+    <Compile Include="ShapeRendering\ShapeRendererBase.cs" />
     <Compile Include="CompositionLog.cs" />
     <Compile Include="EditorCursor.cs" />
     <Compile Include="PerformanceViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapeRendering\ShapeRendererManager.cs" />
+    <Compile Include="ShapeRendering\RectangleShapeObject.cs" />
     <Compile Include="SongPlayer.cs" />
     <Compile Include="StatusDisplay\StatusDisplay.cs" />
     <Compile Include="StatusDisplay\Channels\ChronometerStatusDisplayChannel.cs" />
@@ -74,9 +78,21 @@
       <Project>{729cf52c-d06c-42fd-a2ee-6c19e07d185f}</Project>
       <Name>Glyph.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Glyph.Graphics\Glyph.Graphics.csproj">
+      <Project>{CC4D895F-646F-43C8-B25E-81CF5803ED7A}</Project>
+      <Name>Glyph.Graphics</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Input\Glyph.Input.csproj">
       <Project>{C0D6FD93-B1EB-4877-8125-A69BC3C2795A}</Project>
       <Name>Glyph.Input</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
+      <Project>{43692ee3-467a-41c9-8c18-9e7fcf7cc9dc}</Project>
+      <Name>Glyph.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Messaging\Glyph.Messaging.csproj">
+      <Project>{26405F4B-4532-4F48-A96F-594A70C12B3E}</Project>
+      <Name>Glyph.Messaging</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.UI\Glyph.UI.csproj">
       <Project>{47E66422-AEFC-4B28-92C3-356FFD2E783C}</Project>
