--- a/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
+++ b/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
@@ -47,6 +47,10 @@
       <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
       <Name>Diese.Injection</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
+      <Project>{0781ad0f-eb0f-442e-9a1c-34c2aa9319fd}</Project>
+      <Name>Diese.Modelization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Animation\Glyph.Animation.csproj">
       <Project>{2384DA3A-F989-4B1B-9044-A005CE8F4AB6}</Project>
       <Name>Glyph.Animation</Name>
