--- a/Glyph.Messaging/Glyph.Messaging.csproj
+++ b/Glyph.Messaging/Glyph.Messaging.csproj
@@ -42,6 +42,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouterBase.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\External\Diese\Diese.Collections\Diese.Collections.csproj">
+      <Project>{8E354191-E8E5-498B-9C24-A6765DA86417}</Project>
+      <Name>Diese.Collections</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph\Glyph.csproj">
+      <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
+      <Name>Glyph</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
