--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -38,12 +38,13 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FillingRectangle.cs" />
+    <Compile Include="Renderer\FillingRectangle.cs" />
     <Compile Include="ISceneRenderer.cs" />
     <Compile Include="ISpriteSheet.cs" />
     <Compile Include="ISpriteSheetCarver.cs" />
     <Compile Include="ISpriteSource.cs" />
-    <Compile Include="RendererBase.cs" />
+    <Compile Include="Renderer\MappingRenderer.cs" />
+    <Compile Include="Renderer\RendererBase.cs" />
     <Compile Include="SpriteAnimation.cs" />
     <Compile Include="SpriteAnimatorTransition.cs" />
     <Compile Include="Shapes\CircleSprite.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Shapes\RectangleSprite.cs" />
     <Compile Include="Shapes\ShapedSpriteBase.cs" />
     <Compile Include="SpriteArea.cs" />
+    <Compile Include="SpriteBatchStack.cs" />
     <Compile Include="SpriteLoader.cs" />
     <Compile Include="SpriteAnimator.cs" />
     <Compile Include="SpriteSheet.cs" />
@@ -58,8 +60,8 @@
     <Compile Include="SpriteSourceBase.cs" />
     <Compile Include="SpriteTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpriteRenderer.cs" />
-    <Compile Include="FillingRenderer.cs" />
+    <Compile Include="Renderer\SpriteRenderer.cs" />
+    <Compile Include="Renderer\FillingRenderer.cs" />
     <Compile Include="Carvers\UniformCarver.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +80,10 @@
     <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
       <Project>{43692EE3-467A-41C9-8C18-9E7FCF7CC9DC}</Project>
       <Name>Glyph.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Space\Glyph.Space.csproj">
+      <Project>{068202CC-E943-4718-9771-62D72E50623E}</Project>
+      <Name>Glyph.Space</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
