--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MathUtils.cs" />
     <Compile Include="IArea.cs" />
     <Compile Include="IntegerSequencer.cs" />
     <Compile Include="Matrix3x3.cs" />
@@ -52,6 +53,12 @@
     <Compile Include="Shapes\CenteredRectangle.cs" />
     <Compile Include="Shapes\OriginRectangle.cs" />
     <Compile Include="Transformation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Glyph\Glyph.csproj">
+      <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
+      <Name>Glyph</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
