Change Draw signature, add Drawer & SpriteBatchStack

--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -48,16 +48,20 @@
     <Compile Include="Angle.cs" />
     <Compile Include="Axis.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Drawer.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="GlyphData.cs" />
     <Compile Include="IBatchable.cs" />
     <Compile Include="IDirtable.cs" />
+    <Compile Include="IDrawer.cs" />
     <Compile Include="IHandlable.cs" />
     <Compile Include="ITimeUnscalable.cs" />
     <Compile Include="Point.Extension.cs" />
     <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="Referential.cs" />
     <Compile Include="SpriteBatch.Extension.cs" />
+    <Compile Include="SpriteBatchContext.cs" />
+    <Compile Include="SpriteBatchStack.cs" />
     <Compile Include="Texture2D.Extension.cs" />
     <Compile Include="ElapsedTime.cs" />
     <Compile Include="Transition.Extension.cs" />
