--- a/Glyph.Space/Glyph.Space.csproj
+++ b/Glyph.Space/Glyph.Space.csproj
@@ -37,20 +37,32 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GridRectangle.cs" />
+    <Compile Include="DirtableGrid.cs" />
+    <Compile Include="Grid.cs" />
+    <Compile Include="GridBase.cs" />
+    <Compile Include="GridCase.cs" />
     <Compile Include="GridSize.cs" />
+    <Compile Include="IDirtableGrid.cs" />
     <Compile Include="IGrid.cs" />
+    <Compile Include="IGridCase.cs" />
     <Compile Include="IGridPositionable.cs" />
+    <Compile Include="IWriteableGrid.cs" />
     <Compile Include="Partitioning\IPartition.cs" />
     <Compile Include="Partitioning\ISpacePartitioner.cs" />
     <Compile Include="Partitioning\ISpacePartitionerParameters.cs" />
     <Compile Include="Partitioning\Base\PartitionBase.cs" />
     <Compile Include="Partitioning\Quadtree\QuadtreePartition.cs" />
+    <Compile Include="PoorGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Partitioning\Quadtree\QuadtreeSpacePartitioner.cs" />
     <Compile Include="Partitioning\Base\SpacePartitionerBase.cs" />
+    <Compile Include="ReadOnlyGrid.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\External\Diese\Diese.Collections\Diese.Collections.csproj">
+      <Project>{8e354191-e8e5-498b-9c24-a6765da86417}</Project>
+      <Name>Diese.Collections</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
       <Project>{43692EE3-467A-41C9-8C18-9E7FCF7CC9DC}</Project>
       <Name>Glyph.Math</Name>
