--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -72,6 +72,10 @@
       <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
       <Name>Diese.Injection</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Diese\Diese.Linseq\Diese.Linseq.csproj">
+      <Project>{f9d2ed94-6fa3-46fb-a50b-83c486f33eeb}</Project>
+      <Name>Diese.Linseq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
       <Name>Glyph.Composition</Name>
