--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -42,6 +42,11 @@
     <Compile Include="Delegates\DrawDelegate.cs" />
     <Compile Include="Exceptions\ComponentNotFoundException.cs" />
     <Compile Include="ISceneNode.cs" />
+    <Compile Include="GlyphTypeInfo.cs" />
+    <Compile Include="InjectablePropertyInfo.cs" />
+    <Compile Include="Injection\GlyphInjectableAttribute.cs" />
+    <Compile Include="Injection\GlyphInjectableTargets.cs" />
+    <Compile Include="InstanceManager.cs" />
     <Compile Include="Injection\GlyphCompositeInjector.cs" />
     <Compile Include="GlyphSchedulableBase.cs" />
     <Compile Include="IDraw.cs" />
