--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -45,14 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chronometer.cs" />
-    <Compile Include="ShapeRendering\CircleShapeObject.cs" />
+    <Compile Include="ShapeRendering\CircleShapeRenderer.cs" />
     <Compile Include="ShapeRendering\ShapeRendererBase.cs" />
     <Compile Include="CompositionLog.cs" />
     <Compile Include="EditorCursor.cs" />
     <Compile Include="PerformanceViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRendering\ShapeRendererManager.cs" />
-    <Compile Include="ShapeRendering\RectangleShapeObject.cs" />
+    <Compile Include="ShapeRendering\RectangleShapeRenderer.cs" />
     <Compile Include="SongPlayer.cs" />
     <Compile Include="StatusDisplay\StatusDisplay.cs" />
     <Compile Include="StatusDisplay\Channels\ChronometerStatusDisplayChannel.cs" />
