--- a/Glyph.Physics/Glyph.Physics.csproj
+++ b/Glyph.Physics/Glyph.Physics.csproj
@@ -35,6 +35,10 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -42,7 +46,7 @@
     <Compile Include="ColliderManager.cs" />
     <Compile Include="Colliders\CircleCollider.cs" />
     <Compile Include="Colliders\ColliderBase.cs" />
-    <Compile Include="Colliders\ColliderContainer.cs" />
+    <Compile Include="Colliders\ColliderComposite.cs" />
     <Compile Include="Colliders\CollisionUtils.cs" />
     <Compile Include="Colliders\GridCollider.cs" />
     <Compile Include="Colliders\IGridCollider.cs" />
@@ -74,6 +78,9 @@
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
       <Name>Glyph</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
