--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ISpriteSource.cs" />
     <Compile Include="Renderer\MappingRenderer.cs" />
     <Compile Include="Renderer\RendererBase.cs" />
+    <Compile Include="Renderer\TexturingRenderer.cs" />
     <Compile Include="SpriteAnimation.cs" />
     <Compile Include="SpriteAnimatorTransition.cs" />
     <Compile Include="Shapes\CircleSprite.cs" />
