--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -78,6 +78,10 @@
       <Project>{e2707575-12c2-4ce6-b8e4-e7efd8d4e301}</Project>
       <Name>Diese.Lua</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
+      <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
+      <Name>Diese</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
       <Name>Glyph.Composition</Name>
