--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SchedulingBreakpointHelper.cs" />
     <Compile Include="ShapeRendering\CircleShapeRenderer.cs" />
     <Compile Include="ShapeRendering\ShapeRendererBase.cs" />
     <Compile Include="CompositionLog.cs" />
