--- a/Glyph.Input/Glyph.Input.csproj
+++ b/Glyph.Input/Glyph.Input.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IInputConverter.cs" />
     <Compile Include="IInputParent.cs" />
     <Compile Include="MouseManager.cs" />
+    <Compile Include="StandardInputs\MouseButtonInputs.cs" />
     <Compile Include="ThumbStick.cs" />
     <Compile Include="Trigger.cs" />
     <Compile Include="Handlers\Cursors\CursorHandler.cs" />
