--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -46,13 +46,13 @@
   <ItemGroup>
     <Compile Include="SchedulingBreakpointHelper.cs" />
     <Compile Include="MapEditor.cs" />
-    <Compile Include="ShapeRendering\CircleShapeRenderer.cs" />
-    <Compile Include="ShapeRendering\ShapeRendererBase.cs" />
+    <Compile Include="ShapeRendering\CircleComponentRenderer.cs" />
+    <Compile Include="ShapeRendering\ShapedComponentRendererBase.cs" />
     <Compile Include="CompositionLog.cs" />
     <Compile Include="PerformanceViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShapeRendering\ShapeRendererManager.cs" />
-    <Compile Include="ShapeRendering\RectangleShapeRenderer.cs" />
+    <Compile Include="ShapeRendering\ShapedComponentRendererManager.cs" />
+    <Compile Include="ShapeRendering\RectangleComponentRenderer.cs" />
     <Compile Include="SongPlayer.cs" />
     <Compile Include="StatusDisplay\StatusDisplay.cs" />
     <Compile Include="StatusDisplay\Channels\DefautStatusDisplayChannel.cs" />
