--- a/Glyph.Physics/Glyph.Physics.csproj
+++ b/Glyph.Physics/Glyph.Physics.csproj
@@ -62,6 +62,10 @@
       <Project>{E8D6F663-89A6-497F-A02F-D0FC562D2D0E}</Project>
       <Name>Diese.Composition</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Diese\Diese.Injection\Diese.Injection.csproj">
+      <Project>{6add41dc-f168-43c4-ad4e-f6b8218d8f7c}</Project>
+      <Name>Diese.Injection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
       <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
       <Name>Diese</Name>
