Use Stave submodule to replace Diese.Composition

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/Diese"]
 	path = External/Diese
 	url = https://github.com/ReMinoer/Diese.git
+[submodule "External/Stave"]
+	path = External/Stave
+	url = https://github.com/ReMinoer/Stave
