--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -101,10 +101,6 @@
       <Project>{8e354191-e8e5-498b-9c24-a6765da86417}</Project>
       <Name>Diese.Collections</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese.Composition\Diese.Composition.csproj">
-      <Project>{E8D6F663-89A6-497F-A02F-D0FC562D2D0E}</Project>
-      <Name>Diese.Composition</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Diese\Diese.Debug\Diese.Debug.csproj">
       <Project>{CF81F12F-4EFA-4A26-9853-DF86973533CE}</Project>
       <Name>Diese.Debug</Name>
@@ -124,6 +120,10 @@
     <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
       <Project>{F2F3FEB2-8453-409E-B00C-96DC64AC8020}</Project>
       <Name>Diese</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Stave\Stave.csproj">
+      <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
+      <Name>Stave</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Messaging\Glyph.Messaging.csproj">
       <Project>{26405f4b-4532-4f48-a96f-594a70c12b3e}</Project>
