--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -64,10 +64,6 @@
       <Project>{8E354191-E8E5-498B-9C24-A6765DA86417}</Project>
       <Name>Diese.Collections</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese.Composition\Diese.Composition.csproj">
-      <Project>{e8d6f663-89a6-497f-a02f-d0fc562d2d0e}</Project>
-      <Name>Diese.Composition</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Diese\Diese.Debug\Diese.Debug.csproj">
       <Project>{CF81F12F-4EFA-4A26-9853-DF86973533CE}</Project>
       <Name>Diese.Debug</Name>
@@ -75,6 +71,10 @@
     <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
       <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
       <Name>Diese</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Stave\Stave.csproj">
+      <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
+      <Name>Stave</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Audio\Glyph.Audio.csproj">
       <Project>{46AA8A4B-5A43-45F3-99E4-B7BAD0D47FEA}</Project>
