--- a/Glyph.Effects/Glyph.Effects.csproj
+++ b/Glyph.Effects/Glyph.Effects.csproj
@@ -50,6 +50,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
+      <Project>{F2F3FEB2-8453-409E-B00C-96DC64AC8020}</Project>
+      <Name>Diese</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Stave\Stave.csproj">
       <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
       <Name>Stave</Name>
