--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlLogger.cs" />
+    <Compile Include="InputLogger.cs" />
     <Compile Include="SchedulingBreakpointHelper.cs" />
     <Compile Include="MapEditor.cs" />
     <Compile Include="ShapeRendering\CircleComponentRenderer.cs" />
@@ -53,7 +55,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRendering\ShapedComponentRendererManager.cs" />
     <Compile Include="ShapeRendering\RectangleComponentRenderer.cs" />
-    <Compile Include="SongPlayer.cs" />
     <Compile Include="StatusDisplay\StatusDisplay.cs" />
     <Compile Include="StatusDisplay\Channels\DefautStatusDisplayChannel.cs" />
     <Compile Include="StatusDisplay\StatusDisplayChannel.cs" />
@@ -68,9 +69,21 @@
       <Project>{CF81F12F-4EFA-4A26-9853-DF86973533CE}</Project>
       <Name>Diese.Debug</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Diese\Diese.Injection\Diese.Injection.csproj">
+      <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
+      <Name>Diese.Injection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
       <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
       <Name>Diese</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\Fingear.MonoGame\Fingear.MonoGame.csproj">
+      <Project>{9eef1863-44be-423e-a29d-088c23aac45e}</Project>
+      <Name>Fingear.MonoGame</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\Fingear\Fingear.csproj">
+      <Project>{7EE0B116-6B49-4073-99D8-827DD68B8AE0}</Project>
+      <Name>Fingear</Name>
     </ProjectReference>
     <ProjectReference Include="..\External\Stave\Stave.csproj">
       <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
